--- a/NeoTimingTest/app/src/main/AndroidManifest.xml
+++ b/NeoTimingTest/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NeoTimingTest" >
+        android:theme="@style/Theme.NeoTimingTest"
+        android:networkSecurityConfig="@xml/network_security_config"
+        >
         <activity android:name=".activity_workPage" >
         </activity>
         <activity android:name=".activity_timePicker" />
